<resources>
    <string name="app_name">MahallaDelivery server</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_order">Orders</string>
    <string name="menu_shipper">Shippers</string>
    <string name="sign_out">Sign Out</string>
    <string name="language">English</string>
    <string name="menu_best_deal">Recommended</string>
    <string name="menu_most_popular">Common Food</string>
    <string name="addrecommend">add to\nrecommended</string>

    <string name="resState">Res Statet</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="pleasefillinformation">Please fill information</string>
    <string name="cancel">Cancle</string>





</resources>
