<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_category" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_best_deals"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_best_deal" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/menu_most_popular" />
    </group>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_order" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/menu_shipper" />
    </group>

    <group android:checkableBehavior="single">


    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/sign_out" />
</group>

</menu>
